@@ -10,11 +10,11 @@ import android.widget.TextView
 import androidx.fragment.app.Fragment
 import androidx.lifecycle.ViewModelProvider
 import cl.friendlypos.mypos.R
-import cl.friendlypos.mypos.databinding.FragmentSalesCalcBinding
+import cl.friendlypos.mypos.databinding.ScreenSalesCalcBinding
 
 class SalesCalculatorFragment : Fragment() {
 
-    private var _binding: FragmentSalesCalcBinding? = null
+    private var _binding: ScreenSalesCalcBinding? = null
     private val binding get() = _binding!!
     private lateinit var viewModel: SalesCalculatorViewModel
 
@@ -24,7 +24,7 @@ class SalesCalculatorFragment : Fragment() {
         savedInstanceState: Bundle?
     ): View {
         viewModel = ViewModelProvider(this).get(SalesCalculatorViewModel::class.java)
-        _binding = FragmentSalesCalcBinding.inflate(inflater, container, false)
+        _binding = ScreenSalesCalcBinding.inflate(inflater, container, false)
 
         setupNumericPad()
         setupObservers()
@@ -34,7 +34,7 @@ class SalesCalculatorFragment : Fragment() {
 
     override fun onViewCreated(view: View, savedInstanceState: Bundle?) {
         super.onViewCreated(view, savedInstanceState)
-        _binding = FragmentSalesCalcBinding.bind(view)
+        _binding = ScreenSalesCalcBinding.bind(view)
 
         // Forzamos el badge a mostrar "17" para probar
         updateCartBadge(17)
@@ -59,7 +59,8 @@ class SalesCalculatorFragment : Fragment() {
         binding.btn7.setOnClickListener { viewModel.appendDigit("7") }
         binding.btn8.setOnClickListener { viewModel.appendDigit("8") }
         binding.btn9.setOnClickListener { viewModel.appendDigit("9") }
-        binding.btnDot.setOnClickListener { viewModel.appendDigit(",") }
+        binding.btn00.setOnClickListener { viewModel.appendDigit("00") }
+       // binding.btnDot.setOnClickListener { viewModel.appendDigit(",") }
 
         // Function buttons
         binding.btnClear.setOnClickListener { viewModel.clearEntry() }
