@@ -214,8 +214,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginEnd="2dp"
-            android:layout_weight="0.6"
-            >
+            android:layout_weight="0.6">
 
             <!-- Botón del carrito -->
             <ImageButton
@@ -224,9 +223,9 @@
                 android:layout_height="match_parent"
                 android:background="@drawable/rounded_button_bg"
                 android:padding="8dp"
+                android:scaleType="centerInside"
                 android:src="@drawable/ic_cart"
-                app:tint="@android:color/white"
-                android:scaleType="centerInside"/>
+                app:tint="@android:color/white" />
 
             <!-- Badge con el número -->
             <TextView
@@ -244,20 +243,37 @@
                 android:visibility="visible"/>
         </FrameLayout>
 
-        <!-- Pay Button -->
-        <Button
-            android:id="@+id/btn_pay"
+        <!-- Contenedor para el botón de pagar y el texto del total -->
+        <FrameLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="3"
-            android:background="@drawable/rounded_button_bg"
-            android:padding="12dp"
-            android:text="PAGAR"
-            android:textColor="@android:color/white"
-            android:textSize="18sp"/>
+            android:layout_weight="3">
+
+            <!-- Botón PAGAR -->
+            <Button
+                android:id="@+id/btn_pay"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/rounded_button_bg"
+                android:padding="12dp"
+                android:text="PAGAR"
+                android:textColor="@android:color/white"
+                android:textSize="18sp" />
+
+            <!-- Texto del total a la derecha -->
+            <TextView
+                android:id="@+id/tvTotalAmount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical|end"
+                android:layout_marginEnd="16dp"
+                android:text="$ 240"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"
+                android:visibility="visible"/>
+        </FrameLayout>
 
     </LinearLayout>
 
-    <!-- Total amount on pay button -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
