@@ -18,3 +18,4 @@
 [2025-03-27 13:25:08]	No se encontró una version válida	Automatic update
 [2025-03-27 14:42:58]	No se encontró una version válida	Automatic update
 [2025-03-27 15:30:13]	No se encontró una version válida	Automatic update
+[2025-03-27 22:29:31]	No se encontró una version válida	Aun sin lograre se vea el total el boton de Pagar :(
